--- a/estilo.css
+++ b/estilo.css
@@ -3,3 +3,18 @@
 body {
     background-color: rgb(253, 182, 199);
 }
+h1 {
+    text-align: center;
+    background-color: rgb(213, 184, 203);
+    border-radius: 25px;
+}
+div {
+    text-align: center;
+    border-radius: 25px;
+}
+div.expl {
+    background-color:  rgb(213, 184, 203);
+}
+div.bt:hover{
+    background-color: brown;
+}
